--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <title>mima</title>
+  <title>MimaSim</title>
 
   <!-- numbering the textarea -->
   <style type="text/css">
@@ -28,6 +28,8 @@
   <script type="text/javascript" src="./tln.js"></script>
 </head>
 <body>
+  <h1 style="text-align: center">WebAssembly Mima Simulator</h1>
+  <p style="text-align: center"><a href="https://github.com/bnlrnz/MimaSim">https://github.com/bnlrnz/MimaSim</a></p>
   <div class="flex-container-v">
     <div class="flex-container">
       <div class="flex-container-v" style="margin: 8px">
@@ -79,21 +81,22 @@ HLT
    </div>
    <div class="flex-container" style="height:600px;width:100%;margin-top: 8px;">
     <div class="flex-container-v">
+      <p>LOG</p>
+      <div id="log_text" style="overflow: auto;border: 2px solid gray;" readonly="readonly"></div>
       <div>
         <form name="loglevel_radio_form">
-          <fieldset id="loglevel_radio_field">
+          <fieldset id="loglevel_radio_field" style="border: 0px">
             <input type="radio" name="loglevel" id="ll_trace" value="TRACE">
-            <label for="ll_trace">TRACE</label>
+            <label for="ll_trace" style="margin-right: 16px">TRACE </label>
             <input type="radio" name="loglevel" id="ll_debug" value="DEBUG">
-            <label for="ll_debug">DEBUG</label>
+            <label for="ll_debug" style="margin-right: 16px">DEBUG </label>
             <input type="radio" name="loglevel" id="ll_info" value="INFO">
-            <label for="ll_info">INFO</label>
+            <label for="ll_info" style="margin-right: 16px">INFO </label>
             <input type="radio" name="loglevel" id="ll_warn" value="WARN">
-            <label for="ll_warn">WARN</label>
+            <label for="ll_warn" style="margin-right: 16px">WARN </label>
           </fieldset>
         </form>
       </div>
-      <div id="log_text" style="overflow: auto;border: 2px solid gray;" readonly="readonly"></div>
     </div>
     <div class="flex-container-v">
       <p style="margin-left: 16px">OUTPUT (0xC000002 (char) and 0xC000004 (int))</p>
@@ -123,6 +126,7 @@ HLT
 
   var memoryLineMap = new Map();
   var running = false;
+  var runTimerID;
   var mima_instance;
 
   Module.onRuntimeInitialized = async _ => {
@@ -172,12 +176,11 @@ HLT
     };
 
     document.getElementById('btn_run').onclick = async function(){
-      var id;
       if (running)
       {
         running = false;
 
-        if(id) clearInterval(id);
+        if(runTimerID) clearInterval(runTimerID);
         _mima_wasm_set_run(mima_instance, false);
         document.getElementById('btn_run').value = "Run";
         document.getElementById('btn_step').disabled = false;
@@ -190,7 +193,7 @@ HLT
 
         _mima_wasm_set_run(mima_instance, true);
 
-        id = setInterval(runLoop, 10);
+        runTimerID = setInterval(runLoop, 10);
         function runLoop(){
           _mima_run_micro_instruction_step(mima_instance);
         }
@@ -231,6 +234,8 @@ HLT
 
       document.getElementById('log_text').innerHTML = "";
       document.getElementById('output_text').innerHTML = "";
+
+      if(runTimerID) clearInterval(runTimerID);
     }
 
     document.getElementById('source_code').onchange = function(){
@@ -330,6 +335,7 @@ function setHalted(){
   document.getElementById('btn_mstep').disabled = true;
   document.getElementById('btn_reset').disabled = false;
   running = false;
+  if(runTimerID) clearInterval(runTimerID);
 }
 
 function hitBreakpoint(){
@@ -338,6 +344,7 @@ function hitBreakpoint(){
   document.getElementById('btn_step').disabled = false;
   document.getElementById('btn_mstep').disabled = false;
   running = false;
+  if(runTimerID) clearInterval(runTimerID);
 }
 
 function updateMimaState(target, value){
