fixes reset behaviour

--- a/web/index.html
+++ b/web/index.html
@@ -83,7 +83,7 @@ HLT</textarea>
           <p>LOG</p>
           <form style="margin-top: 0.5em" name="loglevel_radio_form" id="loglevel_radio_form">
             <fieldset id="loglevel_radio_field" style="border: 0px">
-              <input type="radio" name="loglevel" id="ll_trace" value="TRACE" /><label for="ll_trace" style="margin-right: 16px">TRACE</label> <input type="radio" name="loglevel" id="ll_debug" value="DEBUG" /><label for="ll_debug" style="margin-right: 16px">DEBUG</label> <input type="radio" name="loglevel" id="ll_info" value="INFO" /><label for="ll_info" style="margin-right: 16px">INFO</label> <input type="radio" name="loglevel" id="ll_warn" value="WARN" /><label for="ll_warn" style="margin-right: 16px">WARN</label>
+              <input type="radio" name="loglevel" id="ll_trace" value="TRACE" /><label for="ll_trace" style="margin-right: 16px">TRACE</label> <input type="radio" name="loglevel" id="ll_info" value="INFO" /><label for="ll_info" style="margin-right: 16px">INFO</label> <input type="radio" name="loglevel" id="ll_warn" value="WARN" /><label for="ll_warn" style="margin-right: 16px">WARN</label>
             </fieldset>
           </form>
         </div>
