--- a/web/index.html
+++ b/web/index.html
@@ -1,47 +1,30 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  <title>MimaSim</title><!-- numbering the textarea -->
-
-  <style type="text/css">
-  /*<![CDATA[*/
-    #editor{
-    border:2px solid gray;position:relative;
-    height:720px;width:400px;margin: 8px;
-    }
-    #log_text{
-    border:0px solid gray;position:relative;
-    height:720px;width:600px
-    }
-    #output_text{
-    border:0px solid gray;position:relative;
-    height:720px;width:600px;
-    }
-  /*]]>*/
-  </style>
-  <link rel="stylesheet" type="text/css" href="./tln.css" />
-  <script type="text/javascript" src="./tln.js"></script>
-</head>
-<body>
-  <h1 style="text-align: center">WebAssembly Mima Simulator</h1>
-  <p style="text-align: center"><a href="https://github.com/bnlrnz/MimaSim">https://github.com/bnlrnz/MimaSim</a></p>
-  <div class="flex-container-v">
-    <div class="flex-container">
-      <div class="flex-container-v" style="margin: 8px">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <title>MimaSim</title>
+    <link rel="stylesheet" type="text/css" href="./tln.css" />
+    <script type="text/javascript" src="./tln.js"></script>
+  </head>
+  <body>
+    <div class="flex-container-v" style="height: 99%;width: 99%;">
+      <h1 style="text-align: center">WebAssembly Mima Simulator</h1>
+      <p style="text-align: center"><a href="https://github.com/bnlrnz/MimaSim">https://github.com/bnlrnz/MimaSim</a></p>
+      <div class="flex-container">
         <div class="flex-container-v">
-          <input class="button" type="button" id="btn_compile" value="Assemble" /> <input class="button" type="button" id="btn_reset" value="Reset" disabled="disabled" />
+          <div class="flex-container-v">
+            <input class="button" type="button" id="btn_compile" value="Assemble" /> <input class="button" type="button" id="btn_reset" value="Reset" disabled="disabled" />
+          </div>
+          <div class="flex-container-v">
+            <input class="button" type="button" id="btn_run" value="Run" disabled="disabled" /> <input class="button" type="button" id="btn_step" value="Step" disabled="disabled" /> <input class="button" type="button" id="btn_mstep" value="Micro Step" disabled="disabled" />
+          </div>
         </div>
-        <div class="flex-container-v">
-          <input class="button" type="button" id="btn_run" value="Run" disabled="disabled" /> <input class="button" type="button" id="btn_step" value="Step" disabled="disabled" /> <input class="button" type="button" id="btn_mstep" value="Micro Step" disabled="disabled" />
-        </div>
-      </div>
-      <div id="editor">
-        <textarea id="source_code">
+        <div id="editor">
+          <textarea id="source_code">
 // Fibonacci
 0xFF0 1     // F0
 0xFF1 1     // F1
@@ -71,70 +54,73 @@ EQL 0xFFD
 NOT
 JMN LOOP
 HLT</textarea>
-      </div>
-      <div>
-        <object id="mimaimg" src="mima.min.svg" data="mima.min.svg" type="image/svg+xml" style="margin: 8px;">
-        </object>
-      </div>
-    </div>
-    <div class="flex-container" style="height:600px;width:100%;margin-top: 8px;">
-      <div class="flex-container-v">
-        <div class="flex-container">
-          <p>LOG</p>
-          <form style="margin-top: 0.5em" name="loglevel_radio_form" id="loglevel_radio_form">
-            <fieldset id="loglevel_radio_field" style="border: 0px">
-              <input type="radio" name="loglevel" id="ll_trace" value="TRACE" /><label for="ll_trace" style="margin-right: 16px">TRACE</label> <input type="radio" name="loglevel" id="ll_info" value="INFO" /><label for="ll_info" style="margin-right: 16px">INFO</label> <input type="radio" name="loglevel" id="ll_warn" value="WARN" /><label for="ll_warn" style="margin-right: 16px">WARN</label>
-            </fieldset>
-          </form>
         </div>
-        <div id="log_text" style="overflow: auto;border: 2px solid gray;" readonly="readonly"></div>
+        <div>
+          <object id="mimaimg" src="mima.min.svg" data="mima.min.svg" type="image/svg+xml" style="margin: 8px;">
+          </object>
+        </div>
       </div>
-      <div class="flex-container-v">
-        <p>OUTPUT (0xC000003 (char) and 0xC000004 (int))</p>
-        <div id="output_text" style="overflow: auto;border: 2px solid gray;" readonly="readonly"></div>
+      <div class="flex-container" style="height:100%;width:99%;flex: 1;flex-basis: fill;">
+          <div class="flex-container-v" style="height: 90%;flex: 1">
+            <div>OUTPUT</div>
+            <div id="output_text" style="overflow: auto;border: 2px solid gray;height: 100%" readonly="readonly"></div>
+          </div>
+
+          <div class="flex-container-v" style="height: 90%;flex: 4">
+            <div>MEMORY</div>
+            <div id="memorydump_text" style="overflow: auto;border: 2px solid gray;height: 100%" readonly="readonly"></div>
+          </div>
+
+          <div class="flex-container-v" style="height: 90%;flex: 6">
+            <div>LOG</div>
+            <div id="log_text" style="overflow: auto;border: 2px solid gray;height: 100%" readonly="readonly"></div>
+          </div>
+       
+          <div class="flex-container-v" style="align-items: flex-end;">
+            <form name="loglevel_radio_form" id="loglevel_radio_form">
+              <fieldset id="loglevel_radio_field" style="border: 0px">
+                <input type="radio" name="loglevel" id="ll_trace" value="TRACE" /><label for="ll_trace" style="margin-right: 16px">TRACE</label><br> <input type="radio" name="loglevel" id="ll_info" value="INFO" /><label for="ll_info" style="margin-right: 16px">INFO</label><br> <input type="radio" name="loglevel" id="ll_warn" value="WARN" /><label for="ll_warn" style="margin-right: 16px">WARN</label>
+              </fieldset>
+            </form>
+          </div>
+
       </div>
     </div>
-  </div>
-  <script type="text/javascript">
+    <script type="text/javascript">
     
     window.onload = function(){
-
-      loadScripts();
-
-      function loadScripts(){
-        var scripts = [];
-        var _scripts = ['MimaSim.js', 'MimaSimGUI.js']
-
-        loadScriptsSync(_scripts, scripts);
-      }
-
-      function loadScriptsSync(_scripts, scripts){
-        var x = 0;
-        var loopArray = function(_scripts, scripts){
-          loadScript(_scripts[x], scripts[x], function(){
-            ++x;
-            if( x < _scripts.length){
-              loopArray(_scripts, scripts);
-            }
-          });
-        }
-        loopArray(_scripts, scripts)
-      }
-
-      function loadScript(src, script, callback){
-        script = document.createElement('script');
-        script.onerror = function() { 
-            // handling error when loading script
-            alert('Error to handle')
-        }
-        script.onload = function(){
-            console.log(src + ' loaded ')
-            callback();
-        }
-        script.src = src;
-        document.getElementsByTagName('head')[0].appendChild(script);
-      }
+    loadScripts();
+    function loadScripts(){
+    var scripts = [];
+    var _scripts = ['MimaSim.js', 'MimaSimGUI.js']
+    loadScriptsSync(_scripts, scripts);
     }
-  </script>
-</body>
+    function loadScriptsSync(_scripts, scripts){
+    var x = 0;
+    var loopArray = function(_scripts, scripts){
+    loadScript(_scripts[x], scripts[x], function(){
+    ++x;
+    if( x < _scripts.length){
+    loopArray(_scripts, scripts);
+    }
+    });
+    }
+    loopArray(_scripts, scripts)
+    }
+    function loadScript(src, script, callback){
+    script = document.createElement('script');
+    script.onerror = function() {
+    // handling error when loading script
+    alert('Error to handle')
+    }
+    script.onload = function(){
+    console.log(src + ' loaded ')
+    callback();
+    }
+    script.src = src;
+    document.getElementsByTagName('head')[0].appendChild(script);
+    }
+    }
+    </script>
+  </body>
 </html>
