minified js and css

--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>MimaSim</title>
-    <link rel="stylesheet" type="text/css" href="./tln.css" />
-    <script type="text/javascript" src="./tln.js"></script>
+    <link rel="stylesheet" type="text/css" href="./tln.min.css" />
+    <script type="text/javascript" src="./tln.min.js"></script>
   </head>
   <body>
     <div class="flex-container-v" style="height: 99%;width: 99%;">
@@ -95,7 +95,7 @@ HLT</textarea>
     loadScripts();
     function loadScripts(){
     var scripts = [];
-    var _scripts = ['MimaSim.js', 'MimaSimGUI.js']
+    var _scripts = ['MimaSim.js', 'MimaSimGUI.min.js']
     loadScriptsSync(_scripts, scripts);
     }
     function loadScriptsSync(_scripts, scripts){
